fomp (1.0.0) stable;

  * Initial release

 -- David Robillard <d@drobilla.net>  Sat, 27 Oct 2012 16:54:00 -0400
