@@ -1,3 +1,9 @@
+fomp (1.0.1) unstable;
+
+  * Fix phaser plugin data and list phasers in manifest
+
+ -- David Robillard <d@drobilla.net>  Thu, 20 Dec 2012 02:01:30 -0500
+
 fomp (1.0.0) stable;
 
   * Initial release
